Fix screenshots on iOS

--- a/src/components/TroopSquares/TroopSquares.module.scss
+++ b/src/components/TroopSquares/TroopSquares.module.scss
@@ -66,5 +66,7 @@
   .troopImage {
     width: 100%;
     height: auto;
+    position: absolute;
+    top: 0;
   }
 }
